# neural_network

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: mnist.rs  regression.rs  spiral.rs
src/: activation.rs  assert.rs  data.rs  initializer.rs  layer.rs  lib.rs  loss.rs  main.rs  metric.rs  optimizer.rs  regularizer.rs  state.rs  utils.rs
src/activations/: leaky_relu.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/layers/: dense.rs  dropout.rs  mod.rs
src/loss/: binary_cross_entropy.rs  categorical_cross_entropy.rs  mean_absolute_error.rs  mean_squared_error.rs  mod.rs
src/metric/: mod.rs  multi_class_accuracy.rs  regression_accuracy.rs
src/module/: mod.rs
src/module/activations/: leaky_relu.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/module/layers/: dense.rs  dropout.rs  mod.rs
src/optimizers/: adagrad.rs  adam.rs  mod.rs  rmsprop.rs  sgd.rs
