[package]
name = "neural_network"
version = "0.1.0"
edition = "2024"
authors = ["Davis Wolfermann"]
license = "MIT"
description = "A custom neural network library built entirely from scratch in pure Rust."
keywords = ["neural-network", "machine-learning", "deep-learning", "rust"]

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
blas-src = { version = "0.11.1", optional = true }

[dev-dependencies]
plotters = "0.3.7"
byteorder = "1.5.0"


[features]
blas = ["ndarray/blas", "blas-src"]
blas-accelerate = ["blas", "blas-src/accelerate"]